.env and database setup, register login backend, documentation test done
